--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.24"
   }
 }
